--- a/frontend/templates/themes_admin/show_details.html
+++ b/frontend/templates/themes_admin/show_details.html
@@ -51,7 +51,7 @@
                             <div class="row-details">
                                 <i class="fa fa-chevron-circle-right"></i>
                                 <label> &nbsp;Prix Unitaire:
-                                    <label class="value">{{ medicament.prixUnitaire }} </label> 
+                                    <label class="value">{{ medicament.prixUnitaire }} FCFA</label> 
                                 </label>
                                 <br>
                             </div>
