--- a/frontend/templates/themes_client/index.html
+++ b/frontend/templates/themes_client/index.html
@@ -54,16 +54,16 @@
         <div class="d-flex align-items-center justify-content-between">
           <div class="logo">
             <div class="site-logo">
-              <a href="{% url 'liste_medicaments_client' %}" class="js-logo-clone">Pharma</a>
+              <a href="{% url 'liste_medicaments_client' %}" class="js-logo-clone">Pharmapp</a>
             </div>
           </div>
           <div class="main-nav d-none d-lg-block">
             <nav class="site-navigation text-right text-md-center" role="navigation">
               <ul class="site-menu js-clone-nav d-none d-lg-block">
                 <li class="active"><a href="{% url 'liste_medicaments_client' %}">Home</a></li>
-                <li><a href="{% url 'shop' %}">Store</a></li>
+                <li><a href="{% url 'shop' %}">Boutique</a></li>
                 <li class="has-children">
-                  <a href="#">Dropdown</a>
+                  <a href="#">liste déroulante</a>
                   <ul class="dropdown">
                     <li><a href="#">Supplements</a></li>
                     <li class="has-children">
@@ -80,7 +80,7 @@
                     
                   </ul>
                 </li>
-                <li><a href="{% url 'about' %}">About</a></li>
+                <li><a href="{% url 'about' %}">A Propos De Nous</a></li>
                 <li><a href="{% url 'contact' %}">Contact</a></li>
               </ul>
             </nav>
@@ -105,10 +105,10 @@
         <div class="row">
           <div class="col-lg-7 mx-auto order-lg-2 align-self-center">
             <div class="site-block-cover-content text-center">
-              <h2 class="sub-title">Effective Medicine, New Medicine Everyday</h2>
-              <h1>Welcome To Pharma</h1>
+              <h2 class="sub-title">Médécine efficace, nouveaux médicaments au quotidien</h2>
+              <h1>Bienvenue sur Pharmapp</h1>
               <p>
-                <a href="#" class="btn btn-primary px-5 py-3">Shop Now</a>
+                <a href="#" class="btn btn-primary px-5 py-3">Acheter maintenant</a>
               </p>
             </div>
           </div>
