--- a/frontend/templates/themes_admin/my_profile.html
+++ b/frontend/templates/themes_admin/my_profile.html
@@ -17,32 +17,24 @@
                             <a class="avatar avatar-xl card-avatar card-avatar-top">
                                 <img src="{% static 'themes_admin/img/user3.jpg' %}" class="avatar-img rounded-circle border-card">
                             </a>
-                            <p class="card-text text-muted">Admin</p>
+                            <p class="card-text text-muted">{{ role }}</p>
                             <table class="table">
                                 <tbody>
                                     <tr>
                                         <td class="text-left">Name: </td>
-                                        <td class="text-right">Tasneem Anas</td>
+                                        <td class="text-right">{{ name }} {{ prenom }}</td>
                                     </tr>
                                     <tr>
                                         <td class="text-left">Email: </td>
-                                        <td class="text-right">tasneem@gmail.com</td>
+                                        <td class="text-right">{{ email }}</td>
                                     </tr>
                                     <tr>
                                         <td class="text-left">Mobile: </td>
-                                        <td class="text-right">0911111111</td>
+                                        <td class="text-right">{{ numero }}</td>
                                     </tr>
                                     <tr>
-                                        <td class="text-left">Salary: </td>
-                                        <td class="text-right">2000000</td>
-                                    </tr>
-                                    <tr>
-                                        <td class="text-left">Working Hours: </td>
-                                        <td class="text-right">15</td>
-                                    </tr>
-                                    <tr>
-                                        <td class="text-left">Branch: </td>
-                                        <td class="text-right">5</td>
+                                        <td class="text-left">Address: </td>
+                                        <td class="text-right">{{ adresse }}</td>
                                     </tr>
                                 </tbody>
                             </table>
