--- a/frontend/templates/themes_admin/themes_caissier/medicine_select.html
+++ b/frontend/templates/themes_admin/themes_caissier/medicine_select.html
@@ -3,40 +3,32 @@
 {% load static %}
 
 <body>
-    <div class="modal" tabindex="-1" role="dialog" id="selectedMedicinesModal">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title">Médicaments Sélectionnés</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="modal-body">
-                    <table class="table table-bordered">
-                        <thead>
-                            <tr>
-                                <th>Nom</th>
-                                <th>Quantité</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            {% for medicament in selected_medicaments %}
-                            <tr>
-                                <td>{{ medicament.nomMedicament }}</td>
-                                <td>{{ medicament.quantity }}</td>
-                            </tr>
-                            {% endfor %}
-                        </tbody>
-                    </table>
-                </div>
-                <div class="modal-footer">
-                    <a href="{% url 'affichage_medicament_selectionnes' %}" class="btn btn-primary">Envoyer</a>
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Fermer</button>
-                </div>
-            </div>
-        </div>
+    <div class="container">
+        <h1 class="mt-5">Médicaments Sélectionnés</h1>
+        <table class="table table-bordered mt-3">
+            <thead>
+                <tr>
+                    <th>Nom</th>
+                    <th>Libellé</th>
+                    <th>Prix Unitaire</th>
+                    <th>Quantité</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for medicament in medicines %}
+                <tr>
+                    <td>{{ medicament.nom }}</td>
+                    <td>{{ medicament.libelle }}</td>
+                    <td>{{ medicament.prix }}</td>
+                    <td>{{ medicament.quantite }}</td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
     </div>
-</body>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+    </body>
 
 {% endblock %}
