--- a/frontend/templates/themes_admin/themes_pharmacien/affichage_med.html
+++ b/frontend/templates/themes_admin/themes_pharmacien/affichage_med.html
@@ -1,7 +1,6 @@
-{% extends "themes_admin/add_category.html" %}
+{% extends "themes_admin/themes_pharmacien/medicine_list.html" %}
 {% block content %}
 {% load static %}
-
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.css">
 <link rel="stylesheet" href="https://cdn.datatables.net/1.10.25/css/dataTables.bootstrap4.min.css">
@@ -23,8 +22,7 @@
                         Medicine List
                     </div>
                     <div class="p-2 bd-highlight">
-                        <a href="{% url 'medicine_grid' %}"><button type="button" class="btn btn-list"><i class="	fa fa-th"></i> &nbsp;Grid View</button></a>
-                        <a href="{% url 'creation_medicament' %}"><button type="button" class="btn btn-list"><i class="fa fa-plus-square-o"></i> &nbsp;Add Medicine</button></a>
+                        <a href="{% url 'pharmacien_affichage_med_grid' %}"><button type="button" class="btn btn-list"><i class="	fa fa-th"></i> &nbsp;Grid View</button></a>
                     </div>
                 </div>
                 <div class="card-body">
@@ -61,13 +59,6 @@
                                     </td>
                                     <td>
                                         <div class="row">
-                                            <a href="{% url 'vmodifier_medicament' medicament.id %}" title="Edit"><i class="fas fa-edit"></i></a>
-                                            
-                                            <form action="{% url 'supprimer_medicament' medicament.id %}" method="post" onsubmit="return confirm('Êtes-vous sûr de vouloir supprimer ce médicament ?');">
-                                                {% csrf_token %}
-                                                <input type="hidden" name="medicament.id" value="{{ medicament.id }}">
-                                                <button type="submit" class="btn btn-link"><i class="fa fa-trash" aria-hidden="true"></i></button>
-                                            </form>
                                             <a href="{% url 'show_details' medicament.id %}" title="Display"><i class="fas fa-expand-arrows-alt"></i></a>
                                         </div>
                                     </td>
@@ -83,4 +74,5 @@
 
     <!-- End Body -->
 </body>
+
 {% endblock content %}
