Modif du frontend:client

--- a/frontend/static/themes_admin/css/medicine_list.css
+++ b/frontend/static/themes_admin/css/medicine_list.css
@@ -40,7 +40,7 @@
 /* Delete Icone */
 .medicine-list .table .fa-trash{
     color: #dc3545;
-    background-color: #ffe3e6;
+    background-color: #19a713;
     border-radius: 2px;
     padding: 4px;
     font-size: 13px;
