Vue en grille du pharmacien

--- a/frontend/templates/themes_admin/themes_pharmacien/affichage_med_grid.html
+++ b/frontend/templates/themes_admin/themes_pharmacien/affichage_med_grid.html
@@ -43,7 +43,7 @@
                                     </div>
                                     
                                     <div class="card-footer">
-                                        <a href="{% url 'show_details' medicament.id %}" class="d-flex align-items-center show-detail">
+                                        <a href="{% url 'pharmacien_show_details' medicament.id %}" class="d-flex align-items-center show-detail">
                                             <span class="mr-2">Show Details</span>
                                             <span><i class="fas fa-angle-right"></i></span>
                                         </a>
