--- a/frontend/templates/themes_admin/themes_pharmacien/affichage_med.html
+++ b/frontend/templates/themes_admin/themes_pharmacien/affichage_med.html
@@ -59,7 +59,7 @@
                                     </td>
                                     <td>
                                         <div class="row">
-                                            <a href="{% url 'show_details' medicament.id %}" title="Display"><i class="fas fa-expand-arrows-alt"></i></a>
+                                            <a href="{% url 'pharmacien_show_details' medicament.id %}" title="Display"><i class="fas fa-expand-arrows-alt"></i></a>
                                         </div>
                                     </td>
                                 </tr>
