Page d'impression de reçu du caissier

--- a/frontend/templates/themes_admin/show_details.html
+++ b/frontend/templates/themes_admin/show_details.html
@@ -75,7 +75,7 @@
                         </div>
                         <div class="col-lg-1">
                             <div class="d-flex align-items-center">
-                                <img src="{{ medicament.image.url }}" class="rounded float-right" alt="Medicine Image">
+                                <img src="{{ medicament.image.url }}" class="rounded float-right" alt="{{ medicament.nomMedicament }}">
                             </div>
                         </div>
                     </div>
